src/YouVerifyParser.py
# Generated from YouVerify.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class YouVerifyParser ( Parser ):

    grammarFileName = "YouVerify.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'define'", "'record'", "'LABEL'", "'='", 
                     "'return'", "'report'", "'assume'", "'assert'", "'call'", 
                     "'new'", "'$sym'", "'{'", "'}'", "'if'", "'goto'", 
                     "'ARRAY[]'", "'ARRAY['", "']'", "'BV'", "'['", "'BOOL'", 
                     "'INT'", "'ARRAY'", "<INVALID>", "<INVALID>", "'*'", 
                     "'?'", "<INVALID>", "<INVALID>", "<INVALID>", "'->'", 
                     "','", "'('", "')'", "':'", "'.'", "'\t'", "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOLEAN", "OPERATOR", "STAR", "TERNARY_OPERATOR", 
                      "IDENTIFIER", "INTEGER", "NEWLINE", "ARROW", "COMMA", 
                      "OPAREN", "CPAREN", "COLON", "PERIOD", "TAB", "WHITESPACE" ]

    RULE_program = 0
    RULE_global_decl = 1
    RULE_function = 2
    RULE_record = 3
    RULE_labeled_stmt = 4
    RULE_stmt = 5
    RULE_assign_target = 6
    RULE_decl = 7
    RULE_atomic_expr = 8
    RULE_expr = 9
    RULE_array_index_expr = 10
    RULE_record_index_expr = 11
    RULE_unary_expr = 12
    RULE_binary_expr = 13
    RULE_ptr_deref_expr = 14
    RULE_ternary_expr = 15
    RULE_sort = 16
    RULE_simple_sort = 17

    ruleNames =  [ "program", "global_decl", "function", "record", "labeled_stmt", 
                   "stmt", "assign_target", "decl", "atomic_expr", "expr", 
                   "array_index_expr", "record_index_expr", "unary_expr", 
                   "binary_expr", "ptr_deref_expr", "ternary_expr", "sort", 
                   "simple_sort" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    BOOLEAN=24
    OPERATOR=25
    STAR=26
    TERNARY_OPERATOR=27
    IDENTIFIER=28
    INTEGER=29
    NEWLINE=30
    ARROW=31
    COMMA=32
    OPAREN=33
    CPAREN=34
    COLON=35
    PERIOD=36
    TAB=37
    WHITESPACE=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._global_decl = None # Global_declContext
            self.decls = list() # of Global_declContexts
            self._labeled_stmt = None # Labeled_stmtContext
            self.stmts = list() # of Labeled_stmtContexts

        def EOF(self):
            return self.getToken(YouVerifyParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(YouVerifyParser.NEWLINE)
            else:
                return self.getToken(YouVerifyParser.NEWLINE, i)

        def global_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YouVerifyParser.Global_declContext)
            else:
                return self.getTypedRuleContext(YouVerifyParser.Global_declContext,i)


        def labeled_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YouVerifyParser.Labeled_stmtContext)
            else:
                return self.getTypedRuleContext(YouVerifyParser.Labeled_stmtContext,i)


        def getRuleIndex(self):
            return YouVerifyParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YouVerifyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 36
                    localctx._global_decl = self.global_decl()
                    localctx.decls.append(localctx._global_decl)
                    self.state = 37
                    self.match(YouVerifyParser.NEWLINE) 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 44
                localctx._global_decl = self.global_decl()
                localctx.decls.append(localctx._global_decl)



            self.state = 52
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 47
                    localctx._labeled_stmt = self.labeled_stmt()
                    localctx.stmts.append(localctx._labeled_stmt)
                    self.state = 48
                    self.match(YouVerifyParser.NEWLINE) 
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YouVerifyParser.T__2) | (1 << YouVerifyParser.T__4) | (1 << YouVerifyParser.T__5) | (1 << YouVerifyParser.T__6) | (1 << YouVerifyParser.T__7) | (1 << YouVerifyParser.T__8) | (1 << YouVerifyParser.T__9) | (1 << YouVerifyParser.T__13) | (1 << YouVerifyParser.T__14) | (1 << YouVerifyParser.STAR) | (1 << YouVerifyParser.IDENTIFIER))) != 0):
                self.state = 55
                localctx._labeled_stmt = self.labeled_stmt()
                localctx.stmts.append(localctx._labeled_stmt)


            self.state = 58
            self.match(YouVerifyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YouVerifyParser.RULE_global_decl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class GLOBAL_VARContext(Global_declContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.Global_declContext
            super().__init__(parser)
            self.var = None # DeclContext
            self.copyFrom(ctx)

        def decl(self):
            return self.getTypedRuleContext(YouVerifyParser.DeclContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGLOBAL_VAR" ):
                return visitor.visitGLOBAL_VAR(self)
            else:
                return visitor.visitChildren(self)


    class GLOBAL_FUNCContext(Global_declContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.Global_declContext
            super().__init__(parser)
            self.func = None # FunctionContext
            self.copyFrom(ctx)

        def function(self):
            return self.getTypedRuleContext(YouVerifyParser.FunctionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGLOBAL_FUNC" ):
                return visitor.visitGLOBAL_FUNC(self)
            else:
                return visitor.visitChildren(self)


    class GLOBAL_RECContext(Global_declContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.Global_declContext
            super().__init__(parser)
            self.rec = None # RecordContext
            self.copyFrom(ctx)

        def record(self):
            return self.getTypedRuleContext(YouVerifyParser.RecordContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGLOBAL_REC" ):
                return visitor.visitGLOBAL_REC(self)
            else:
                return visitor.visitChildren(self)



    def global_decl(self):

        localctx = YouVerifyParser.Global_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_decl)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [YouVerifyParser.IDENTIFIER, YouVerifyParser.COLON]:
                localctx = YouVerifyParser.GLOBAL_VARContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                localctx.var = self.decl()
                pass
            elif token in [YouVerifyParser.T__1]:
                localctx = YouVerifyParser.GLOBAL_RECContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                localctx.rec = self.record()
                pass
            elif token in [YouVerifyParser.T__0]:
                localctx = YouVerifyParser.GLOBAL_FUNCContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                localctx.func = self.function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._decl = None # DeclContext
            self.params = list() # of DeclContexts
            self.return_type = None # SortContext
            self.decls = list() # of DeclContexts
            self._labeled_stmt = None # Labeled_stmtContext
            self.stmts = list() # of Labeled_stmtContexts

        def OPAREN(self):
            return self.getToken(YouVerifyParser.OPAREN, 0)

        def CPAREN(self):
            return self.getToken(YouVerifyParser.CPAREN, 0)

        def COLON(self):
            return self.getToken(YouVerifyParser.COLON, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(YouVerifyParser.NEWLINE)
            else:
                return self.getToken(YouVerifyParser.NEWLINE, i)

        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)

        def ARROW(self):
            return self.getToken(YouVerifyParser.ARROW, 0)

        def sort(self):
            return self.getTypedRuleContext(YouVerifyParser.SortContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YouVerifyParser.COMMA)
            else:
                return self.getToken(YouVerifyParser.COMMA, i)

        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(YouVerifyParser.TAB)
            else:
                return self.getToken(YouVerifyParser.TAB, i)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YouVerifyParser.DeclContext)
            else:
                return self.getTypedRuleContext(YouVerifyParser.DeclContext,i)


        def labeled_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YouVerifyParser.Labeled_stmtContext)
            else:
                return self.getTypedRuleContext(YouVerifyParser.Labeled_stmtContext,i)


        def getRuleIndex(self):
            return YouVerifyParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = YouVerifyParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(YouVerifyParser.T__0)
            self.state = 66
            localctx.name = self.match(YouVerifyParser.IDENTIFIER)
            self.state = 67
            self.match(YouVerifyParser.OPAREN)

            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    localctx._decl = self.decl()
                    localctx.params.append(localctx._decl)
                    self.state = 69
                    self.match(YouVerifyParser.COMMA) 
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YouVerifyParser.IDENTIFIER or _la==YouVerifyParser.COLON:
                self.state = 76
                localctx._decl = self.decl()
                localctx.params.append(localctx._decl)


            self.state = 79
            self.match(YouVerifyParser.CPAREN)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YouVerifyParser.ARROW:
                self.state = 80
                self.match(YouVerifyParser.ARROW)
                self.state = 81
                localctx.return_type = self.sort()


            self.state = 84
            self.match(YouVerifyParser.COLON)
            self.state = 85
            self.match(YouVerifyParser.NEWLINE)

            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    self.match(YouVerifyParser.TAB)
                    self.state = 87
                    localctx._decl = self.decl()
                    localctx.decls.append(localctx._decl)
                    self.state = 88
                    self.match(YouVerifyParser.NEWLINE) 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 95
                self.match(YouVerifyParser.TAB)
                self.state = 96
                localctx._decl = self.decl()
                localctx.decls.append(localctx._decl)



            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    self.match(YouVerifyParser.TAB)
                    self.state = 100
                    localctx._labeled_stmt = self.labeled_stmt()
                    localctx.stmts.append(localctx._labeled_stmt)
                    self.state = 101
                    self.match(YouVerifyParser.NEWLINE) 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YouVerifyParser.TAB:
                self.state = 108
                self.match(YouVerifyParser.TAB)
                self.state = 109
                localctx._labeled_stmt = self.labeled_stmt()
                localctx.stmts.append(localctx._labeled_stmt)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._decl = None # DeclContext
            self.elems = list() # of DeclContexts

        def OPAREN(self):
            return self.getToken(YouVerifyParser.OPAREN, 0)

        def CPAREN(self):
            return self.getToken(YouVerifyParser.CPAREN, 0)

        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YouVerifyParser.COMMA)
            else:
                return self.getToken(YouVerifyParser.COMMA, i)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YouVerifyParser.DeclContext)
            else:
                return self.getTypedRuleContext(YouVerifyParser.DeclContext,i)


        def getRuleIndex(self):
            return YouVerifyParser.RULE_record

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecord" ):
                return visitor.visitRecord(self)
            else:
                return visitor.visitChildren(self)




    def record(self):

        localctx = YouVerifyParser.RecordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_record)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(YouVerifyParser.T__1)
            self.state = 113
            localctx.name = self.match(YouVerifyParser.IDENTIFIER)
            self.state = 114
            self.match(YouVerifyParser.OPAREN)

            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 115
                    localctx._decl = self.decl()
                    localctx.elems.append(localctx._decl)
                    self.state = 116
                    self.match(YouVerifyParser.COMMA) 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YouVerifyParser.IDENTIFIER or _la==YouVerifyParser.COLON:
                self.state = 123
                localctx._decl = self.decl()
                localctx.elems.append(localctx._decl)


            self.state = 126
            self.match(YouVerifyParser.CPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Labeled_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YouVerifyParser.RULE_labeled_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UNLABELEDContext(Labeled_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.Labeled_stmtContext
            super().__init__(parser)
            self.statement = None # StmtContext
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(YouVerifyParser.StmtContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUNLABELED" ):
                return visitor.visitUNLABELED(self)
            else:
                return visitor.visitChildren(self)


    class LABELEDContext(Labeled_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.Labeled_stmtContext
            super().__init__(parser)
            self.identifier = None # Token
            self.statement = None # StmtContext
            self.copyFrom(ctx)

        def COLON(self):
            return self.getToken(YouVerifyParser.COLON, 0)
        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)
        def stmt(self):
            return self.getTypedRuleContext(YouVerifyParser.StmtContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLABELED" ):
                return visitor.visitLABELED(self)
            else:
                return visitor.visitChildren(self)



    def labeled_stmt(self):

        localctx = YouVerifyParser.Labeled_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_labeled_stmt)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [YouVerifyParser.T__2]:
                localctx = YouVerifyParser.LABELEDContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(YouVerifyParser.T__2)
                self.state = 129
                localctx.identifier = self.match(YouVerifyParser.IDENTIFIER)
                self.state = 130
                self.match(YouVerifyParser.COLON)
                self.state = 131
                localctx.statement = self.stmt()
                pass
            elif token in [YouVerifyParser.T__4, YouVerifyParser.T__5, YouVerifyParser.T__6, YouVerifyParser.T__7, YouVerifyParser.T__8, YouVerifyParser.T__9, YouVerifyParser.T__13, YouVerifyParser.T__14, YouVerifyParser.STAR, YouVerifyParser.IDENTIFIER]:
                localctx = YouVerifyParser.UNLABELEDContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                localctx.statement = self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YouVerifyParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ALLOC_CONCContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.StmtContext
            super().__init__(parser)
            self.target = None # Assign_targetContext
            self.operator = None # Token
            self._expr = None # ExprContext
            self.operands = list() # of ExprContexts
            self.copyFrom(ctx)

        def OPAREN(self):
            return self.getToken(YouVerifyParser.OPAREN, 0)
        def CPAREN(self):
            return self.getToken(YouVerifyParser.CPAREN, 0)
        def assign_target(self):
            return self.getTypedRuleContext(YouVerifyParser.Assign_targetContext,0)

        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YouVerifyParser.COMMA)
            else:
                return self.getToken(YouVerifyParser.COMMA, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YouVerifyParser.ExprContext)
            else:
                return self.getTypedRuleContext(YouVerifyParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitALLOC_CONC" ):
                return visitor.visitALLOC_CONC(self)
            else:
                return visitor.visitChildren(self)


    class RETURNContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.StmtContext
            super().__init__(parser)
            self.expression = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(YouVerifyParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRETURN" ):
                return visitor.visitRETURN(self)
            else:
                return visitor.visitChildren(self)


    class ASSERTContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.StmtContext
            super().__init__(parser)
            self.expression = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(YouVerifyParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitASSERT" ):
                return visitor.visitASSERT(self)
            else:
                return visitor.visitChildren(self)


    class FUNC_CALLContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.StmtContext
            super().__init__(parser)
            self.target = None # Assign_targetContext
            self.operator = None # Token
            self._expr = None # ExprContext
            self.operands = list() # of ExprContexts
            self.copyFrom(ctx)

        def OPAREN(self):
            return self.getToken(YouVerifyParser.OPAREN, 0)
        def CPAREN(self):
            return self.getToken(YouVerifyParser.CPAREN, 0)
        def assign_target(self):
            return self.getTypedRuleContext(YouVerifyParser.Assign_targetContext,0)

        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YouVerifyParser.COMMA)
            else:
                return self.getToken(YouVerifyParser.COMMA, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YouVerifyParser.ExprContext)
            else:
                return self.getTypedRuleContext(YouVerifyParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFUNC_CALL" ):
                return visitor.visitFUNC_CALL(self)
            else:
                return visitor.visitChildren(self)


    class ALLOC_SYMBContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.StmtContext
            super().__init__(parser)
            self.target = None # Assign_targetContext
            self.identifier = None # Token
            self.copyFrom(ctx)

        def assign_target(self):
            return self.getTypedRuleContext(YouVerifyParser.Assign_targetContext,0)

        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitALLOC_SYMB" ):
                return visitor.visitALLOC_SYMB(self)
            else:
                return visitor.visitChildren(self)


    class UNCONDITIONAL_BRANCHContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.StmtContext
            super().__init__(parser)
            self.label = None # Token
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUNCONDITIONAL_BRANCH" ):
                return visitor.visitUNCONDITIONAL_BRANCH(self)
            else:
                return visitor.visitChildren(self)


    class FUNC_CALL_NO_VALUEContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.StmtContext
            super().__init__(parser)
            self.operator = None # Token
            self._expr = None # ExprContext
            self.operands = list() # of ExprContexts
            self.copyFrom(ctx)

        def OPAREN(self):
            return self.getToken(YouVerifyParser.OPAREN, 0)
        def CPAREN(self):
            return self.getToken(YouVerifyParser.CPAREN, 0)
        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YouVerifyParser.COMMA)
            else:
                return self.getToken(YouVerifyParser.COMMA, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YouVerifyParser.ExprContext)
            else:
                return self.getTypedRuleContext(YouVerifyParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFUNC_CALL_NO_VALUE" ):
                return visitor.visitFUNC_CALL_NO_VALUE(self)
            else:
                return visitor.visitChildren(self)


    class REPORTContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YouVerifyParser.StmtContext
            super().__init__(parser)
            self.identifier = None # Token
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(YouVerifyParser.IDENTIFIER, 0)
